--- a/Changes
+++ b/Changes
@@ -1,6 +1,14 @@
 Revision history for Perl extension Text::Morse.
 
-0.02  2014/02/27
+0.03  2014/03/01
+
+	No longer selecting a has variable based on unchecked user input
+	Now using warnings
+	Adding a README file
+	Adding license and copyright info into main POD
+	Added POD testing
+
+0.02	2014/02/27
 
 	Applied patch from RT #20580 by Kevin J Walters <kevin.walters@morganstanley.com>
 	Added updated tests based on Test::Simple
