--- a/Changes
+++ b/Changes
@@ -1,5 +1,9 @@
 Revision history for Perl extension Text::Morse.
 
+0.04  2014/03/09
+
+	Automatically generated meta data
+
 0.03  2014/03/01
 
 	No longer selecting a has variable based on unchecked user input
